--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+li{
+    list-style: none;
+    
+ 
+}
+.main{
+    border: 1px solid rgba(94, 81, 81, 0.724);
+    height: 500px;
+    box-shadow: 5px 10px 8px 10px #888888;
+    min-width: 400px;
+}
+.error{
+    color: red;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input{
+    text-align: center;
 }
